lab_3/lab_3.sdk/.metadata/.plugins/org.eclipse.cdt.ui/test_2.build.log
15:29:27 **** Auto Build of configuration Debug for project test_2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/test2.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/test2.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../test_2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/test2.d" -MT"src/test2.o" -o "src/test2.o" "../src/test2.c"
../src/test2.c: In function 'main':
../src/test2.c:135:39: error: 'BTNS_DEVICE_ID' undeclared (first use in this function); did you mean 'BTN_DEVICE_ID'?
   status = XGpio_Initialize(&BTNInst, BTNS_DEVICE_ID);
                                       ^~~~~~~~~~~~~~
                                       BTN_DEVICE_ID
../src/test2.c:135:39: note: each undeclared identifier is reported only once for each function it appears in
../src/test2.c:154:32: warning: passing argument 2 of 'XTmrCtr_SetHandler' from incompatible pointer type [-Wincompatible-pointer-types]
   XTmrCtr_SetHandler(&TMRInst, TMR_Intr_Handler, &TMRInst);
                                ^~~~~~~~~~~~~~~~
In file included from ../src/test2.c:3:0:
../../test_2_bsp/ps7_cortexa9_0/include/xtmrctr.h:314:6: note: expected 'XTmrCtr_Handler {aka void (*)(void *, unsigned char)}' but argument is of type 'void (*)(void *)'
 void XTmrCtr_SetHandler(XTmrCtr * InstancePtr, XTmrCtr_Handler FuncPtr,
      ^~~~~~~~~~~~~~~~~~
../src/test2.c:239:1: error: expected declaration or statement at end of input
 }
 ^
../src/test2.c:126:7: warning: variable 'btnValue' set but not used [-Wunused-but-set-variable]
   int btnValue;
       ^~~~~~~~
../src/test2.c:125:7: warning: variable 'swsValue' set but not used [-Wunused-but-set-variable]
   int swsValue;
       ^~~~~~~~
../src/test2.c: At top level:
../src/test2.c:42:12: warning: 'InterruptSystemSetup' declared 'static' but never defined [-Wunused-function]
 static int InterruptSystemSetup(XScuGic *XScuGicInstancePtr);
            ^~~~~~~~~~~~~~~~~~~~
../src/test2.c:43:12: warning: 'IntcInitFunction' used but never defined
 static int IntcInitFunction(u16 DeviceId, XTmrCtr *TmrInstancePtr, XGpio *GpioInstancePtr);
            ^~~~~~~~~~~~~~~~
../src/test2.c:199:5: warning: 'IntcInitFunction' defined but not used [-Wunused-function]
 int IntcInitFunction(u16 DeviceId, XTmrCtr *TmrInstancePtr, XGpio *GpioInstancePtr)
     ^~~~~~~~~~~~~~~~
../src/test2.c:34:12: warning: 'tmrLimit' defined but not used [-Wunused-variable]
 static int tmrLimit;
            ^~~~~~~~
make: *** [src/subdir.mk:23: src/test2.o] Error 1

15:29:32 Build Finished (took 5s.221ms)

